<resources>
    <string name="app_name">Remote Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>

    <string name="text1">我的电视</string>
    <string name="text2">电源：</string>
    <string name="text3">音量：</string>
    <string name="text4">当前频道：</string>
    <string name="text5">我的遥控器</string>
    <string name="text6">电源</string>
    <string name="text7">音量</string>
    <string name="text8">频道</string>
    <string name="text9">最爱频道</string>
    <string name="btn1">0</string>
    <string name="btn2">1</string>
    <string name="btn3">2</string>
    <string name="btn4">3</string>
    <string name="btn5">4</string>
    <string name="btn6">5</string>
    <string name="btn7">6</string>
    <string name="btn8">7</string>
    <string name="btn9">8</string>
    <string name="btn10">9</string>
    <string name="btn11">频道+</string>
    <string name="btn12">频道-</string>
    <string name="btn13">CCTV2</string>
    <string name="btn14">CCTV5</string>
    <string name="btn15">CCTV13</string>
</resources>
